moved css config to csc.conf fixed default year selection display for call- and voicemaillist fixed spacing for call and voicemail search forms - TBC with IE some html cleanups

--- a/root/css/sipwise.css
+++ b/root/css/sipwise.css
@@ -76,6 +76,16 @@
    white-space: nowrap;
 }
 
+/* spacing for small calllist and voicemaillist search forms */
+.search_container {
+    width: auto;
+    margin-bottom: 40px;
+}
+
+#anrufsuchereset .save label {
+    margin-top: 4px !important;
+}
+
 /* center alignment for contact list */
 .kontaktliste td {
    vertical-align: middle;
